--- a/APLICATIVO/LOGIN_JAVA_GRUPO8/web/usuario/InicioUsuario.xhtml
+++ b/APLICATIVO/LOGIN_JAVA_GRUPO8/web/usuario/InicioUsuario.xhtml
@@ -23,7 +23,7 @@ and open the template in the editor.
                     </center>
                 </div>
             </div>
-            <div class="derecha">hola</div>
+            <div class="derecha">Panel de control</div>
         </div>
     </h:body>
 </html>
